Logging, config code

--- a/supervisord_prod.conf
+++ b/supervisord_prod.conf
@@ -16,6 +16,18 @@ command = 	bin/uwsgi -s 127.0.0.1:5001
 		  --chdir /home/uday/code/reminder_service/reminderservice
           --wsgi-file application.py --callable app
           --processes 2 -t 60 --disable-logging -M --need-app -b 32768
-          --env CONFIG_FILE=production.conf
+          --env CONFIG=development.conf
+
+user=uday
+stopsignal=INT
+
+[program:leanreview]
+command =/home/uday/code/one_word_virtual/bin/uwsgi -s 127.0.0.1:5000
+		  --chdir /home/uday/code/one_word_virtual/one_word_application
+          --wsgi-file application.py --callable app
+          --processes 2 -t 60 --disable-logging -M --need-app -b 32768
+          --env CONFIG_FILE=development.conf
+
+
 user=uday
 stopsignal=INT
