--- a/production.conf
+++ b/production.conf
@@ -10,3 +10,4 @@ MAIL_SENDER='udayj.dev@gmail.com'
 DATABASE='reminder_service'
 SYSTEM_OFFSET_HOURS=0
 SYSTEM_OFFSET_MINUTES=0
+SECRET_KEY='SECRET'
