--- a/development.conf
+++ b/development.conf
@@ -4,9 +4,10 @@ MAIL_USE_TLS = False
 MAIL_USE_SSL = True
 MAIL_USERNAME = 'udayj.dev'
 MAIL_PASSWORD = 'ud27AY08'
-HOST='http://localhost:5001'
+HOST='http://localhost:5000'
 DEBUG=True
 MAIL_SENDER='udayj.dev@gmail.com'
 DATABASE='reminder_service'
 SYSTEM_OFFSET_HOURS=-5
 SYSTEM_OFFSET_MINUTES=-30
+SECRET_KEY='SECRET'
