Configuration setting for blog

--- a/nginx.conf
+++ b/nginx.conf
@@ -55,3 +55,28 @@ server {
 
 
 }
+upstream blog {
+    server 127.0.0.1:3000;
+    
+}
+
+server {
+    listen 80;
+    server_name idea-maze.com www.idea-maze.com;    
+
+    
+
+    root /home/uday/code/blog_meteor;
+
+
+
+    location / {
+        proxy_pass http://localhost:3000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+    }
+
+
+}
