some config changes, new page for creating new tasks, attachment details on task page

--- a/development.conf
+++ b/development.conf
@@ -11,3 +11,7 @@ DATABASE='reminder_service'
 SYSTEM_OFFSET_HOURS=-5
 SYSTEM_OFFSET_MINUTES=-30
 SECRET_KEY='SECRET'
+UPLOAD_FOLDER='static/data'
+ADMIN_PASSWORD='password'
+ACCOUNT_SID='ACbb51060d0fb44e38bccbde905f0781ae'
+AUTH_TOKEN='7c4e788704bc432a8c7ed2ae72404e12'
