--- a/production.conf
+++ b/production.conf
@@ -4,10 +4,14 @@ MAIL_USE_TLS = False
 MAIL_USE_SSL = True
 MAIL_USERNAME = 'udayj.dev'
 MAIL_PASSWORD = 'ud27AY08'
-HOST='http://162.243.69.244:86'
-DEBUG=True
+HOST='https://www.remindica.com'
+DEBUG=False
 MAIL_SENDER='udayj.dev@gmail.com'
 DATABASE='reminder_service'
 SYSTEM_OFFSET_HOURS=0
 SYSTEM_OFFSET_MINUTES=0
 SECRET_KEY='SECRET'
+UPLOAD_FOLDER='static/data'
+ADMIN_PASSWORD='password'
+ACCOUNT_SID='ACbb51060d0fb44e38bccbde905f0781ae'
+AUTH_TOKEN='7c4e788704bc432a8c7ed2ae72404e12'
