production config changes for twilio

--- a/production.conf
+++ b/production.conf
@@ -5,6 +5,7 @@ MAIL_USE_SSL = True
 MAIL_USERNAME = 'udayj.dev'
 MAIL_PASSWORD = 'ud27AY08'
 HOST='https://www.remindica.com'
+HOST_TWILIO='https://162.243.69.244'
 DEBUG=False
 MAIL_SENDER='udayj.dev@gmail.com'
 DATABASE='reminder_service'
