handling special characters for response xml file

--- a/development.conf
+++ b/development.conf
@@ -5,6 +5,7 @@ MAIL_USE_SSL = True
 MAIL_USERNAME = 'udayj.dev'
 MAIL_PASSWORD = 'ud27AY08'
 HOST='http://localhost:5000'
+HOST_TWILIO='https://162.243.69.244'
 DEBUG=True
 MAIL_SENDER='udayj.dev@gmail.com'
 DATABASE='reminder_service'
